# how-to-win

./: FPGrowth.ipynb  LICENSE  MakeDataset.ipynb  README.md  pyproject.toml
data/: Transactions_LaLiga.txt
